<resources>
    <string name="app_name">公证身份认证</string>
    <string name="home">首页</string>
    <string name="identity">身份认证</string>
    <string name="query">查询</string>
    <string name="mine">我的</string>
    <string name="_new">新建</string>
    <string name="number">编号</string>
    <string name="name">姓名</string>
    <string name="address">住址</string>
    <string name="item">公证事项</string>
    <string name="comparison">人证对比</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="identity_1">身份证认证</string>
    <string name="identity_2">人脸识别</string>
    <string name="identity_3">指纹识别</string>
    <string name="fp_collection">指纹采集</string>
    <string name="take_photo">拍照</string>
    <string name="left_hand">左手</string>
    <string name="right_hand">右手</string>
    <string name="thumb_finger">大拇指</string>
    <string name="index_finger">食指</string>
    <string name="middle_finger">中指</string>
    <string name="ring_finger">无名指</string>
    <string name="little_finger">小拇指</string>
    <string name="photo">现场照片</string>
    <string name="identity_photo">身份证照</string>
    <string name="identity_info">身份信息</string>
    <string name="birthday">出生</string>
    <string name="identity_no">身份证</string>
    <string name="similarity">相似度</string>
    <string name="more_details">查看详情</string>
    <string name="tip_error">Error</string>
    <string name="msg_fp_open_fail">打开指纹失败</string>
    <string name="ok">确定</string>
    <string name="tip_title">提示</string>
    <string name="msg_save_ok">保存成功</string>
    <string name="msg_save_fail">保存失败</string>
    <string name="current_fp">现场指纹</string>
    <string name="identity_fp">身份证指纹</string>
    <string name="comparison1">指纹1对比</string>
    <string name="comparison2">指纹2对比</string>
    <string name="similarity1">相似度1</string>
    <string name="similarity2">相似度2</string>
    <string name="comparison_details">认证对比详情</string>
    <string name="delete">删除信息</string>
    <string name="msg_delete">确定要删除吗？</string>
    <string name="fp_scan">指纹扫描</string>
    <string name="identity_card">身份证</string>
    <string name="locale_take_photo">现场拍照</string>
    <string name="verify_time">认证时间</string>
    <string name="pic_save_as">保存为图片</string>
    <string name="paries">当事人</string>
    <string name="resource_txt">文书材料</string>
    <string name="resource_video">录像</string>
    <string name="resource_audio">录音</string>
    <string name="resource_pigeonhole">归档</string>
    <string name="resource_photo">照片</string>
    <string name="applicant">申请人姓名</string>
    <string name="notary">公证员</string>
    <string name="add_txt_res">添加文书材料</string>
    <string name="application_form">申请书</string>
    <string name="talk_record">谈话笔录</string>
    <string name="btn_add">添加</string>
    <string name="add_video">添加录像</string>
    <string name="add_audio">添加录音</string>
    <string name="add_photo">添加照片</string>
    <string name="msg_error">未知错误</string>
    <string name="msg_capture_fail"></string>

    <string name="camera_permission_refuse">无法获取摄像头数据，请在手机应用权限管理中打开插旗地图的摄像头权限</string>
    <string name="audio_permission_refuse">无法获取音频数据，请在手机应用权限管理中打开插旗地图的通话及本地录音的权限</string>
    <string name="local_video_not_found">本地视频不存在，无法播放</string>
    <string name="know_that">知道了</string>
    <string name="start_recording">开始录制</string>
    <string name="either_save_video">是否保存录制的视频文件</string>
    <string name="sure_to_cancel">确定取消录制吗？</string>
    <string name="discard">取消录制</string>
    <string name="reRecord">重新拍摄</string>
    <string name="camera_start_failed">摄像头启动失败</string>
    <string name="sdcard_not_found">sd卡不存在</string>
    <string name="play_cancel">播放已取消</string>
    <string name="play_execption">播放异常</string>
    <string name="recording">正在录制中</string>
    <string name="video_playing">有视频正在播放</string>
    <string name="url_null">播放路径为空</string>
    <string name="record_time_too_short">录制时间太短</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="onpause_record_finish">录制结束，视频文件已保存</string>

</resources>
