<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="true">
    <TextView
        android:id="@+id/tv_current_fp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_fp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="16dp"
        />
    <ImageView
        android:id="@+id/img_current_fp1"
        android:layout_marginTop="16dp"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:src="@drawable/u2"
        android:layout_alignLeft="@id/tv_current_fp"
        android:layout_below="@id/tv_current_fp"
        />

    <ImageView
        android:id="@+id/img_current_fp2"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:src="@drawable/u2"
        android:layout_alignLeft="@id/tv_current_fp"
        android:layout_below="@id/img_current_fp1"
        android:layout_marginTop="24dp"
        />

    <TextView
        android:id="@+id/tv_identity_fp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/identity_fp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="96dp"
        android:layout_toRightOf="@id/img_current_fp1"/>

    <ImageView
        android:id="@+id/img_identity_fp1"
        android:layout_marginTop="16dp"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:src="@drawable/u2"
        android:layout_alignLeft="@id/tv_identity_fp"
        android:layout_below="@id/tv_current_fp"
        />

    <ImageView
        android:id="@+id/img_identity_fp2"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:src="@drawable/u2"
        android:layout_alignLeft="@id/tv_identity_fp"
        android:layout_below="@id/img_identity_fp1"
        android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/btn_comparison1"
        android:layout_marginTop="24dp"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comparison1"
        android:layout_alignLeft="@id/img_current_fp2"
        android:layout_below="@id/img_current_fp2"
        />

    <Button
        android:id="@+id/btn_comparison2"
        android:layout_marginTop="24dp"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comparison2"
        android:layout_alignRight="@id/img_identity_fp2"
        android:layout_below="@id/img_identity_fp2"
        />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_alignTop="@id/btn_cancel"
        android:layout_toLeftOf="@id/btn_cancel"
        android:layout_marginRight="16dp"/>

    <RelativeLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@drawable/table_stroke_shape"
        android:layout_toRightOf="@id/img_identity_fp1"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="24dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/identity_info"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:id="@+id/tv_title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="8dp"
            />
        <EditText
            android:id="@+id/et_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_title_name"
            android:hint="@string/name"
            android:layout_marginLeft="16dp"
            android:layout_alignBaseline="@id/tv_title_name"
            />

        <TextView
            android:id="@+id/tv_title_birthday"
            android:layout_below="@id/tv_title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="8dp"
            />
        <EditText
            android:id="@+id/et_birthday"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_title_birthday"
            android:hint="@string/birthday"
            android:layout_marginLeft="16dp"
            android:layout_alignBaseline="@id/tv_title_birthday"
            />

        <TextView
            android:id="@+id/tv_title_identity_no"
            android:layout_below="@id/tv_title_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/identity_no"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="8dp"
            />
        <EditText
            android:id="@+id/et_identity_no"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/identity_no"
            android:layout_alignLeft="@id/et_birthday"
            android:layout_alignBaseline="@id/tv_title_identity_no"
            />
        <TextView
            android:id="@+id/tv_title_similarity1"
            android:layout_below="@id/tv_title_identity_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/similarity1"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="8dp"
            />
        <EditText
            android:id="@+id/et_similarity1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/similarity1"
            android:layout_alignLeft="@id/et_birthday"
            android:layout_alignBaseline="@id/tv_title_similarity1"
            />

        <TextView
            android:id="@+id/tv_title_similarity2"
            android:layout_below="@id/tv_title_similarity1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/similarity2"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="24dp"
            />
        <EditText
            android:id="@+id/et_similarity2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/similarity2"
            android:layout_alignLeft="@id/et_birthday"
            android:layout_alignBaseline="@id/tv_title_similarity2"
            android:layout_marginBottom="24dp"
            />
    </RelativeLayout>

</RelativeLayout>