<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300px"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/btn_comparison"
        android:layout_width="300px"
        android:layout_height="64px"
        android:text="@string/comparison"
        android:gravity="center"
        android:background="@drawable/round_corner_menu"
        android:clickable="true"
        />

    <TextView
        android:id="@+id/btn_more_details"
        android:layout_marginTop="8dp"
        android:layout_width="300px"
        android:layout_height="64px"
        android:text="@string/more_details"
        android:gravity="center"
        android:background="@drawable/round_corner_menu"
        android:clickable="true"
        />

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_marginTop="24dp"
        android:layout_width="300px"
        android:layout_height="64px"
        android:text="@string/cancel"
        android:gravity="center"
        android:layout_marginBottom="36dp"
        android:background="@drawable/round_corner_menu"
        android:clickable="true"
        />

</LinearLayout>