<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <include
        android:id="@+id/layout_face_verify"
        layout="@layout/layout_face_verify"
         />

    <TextView
        android:id="@+id/btn_comparison"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/comparison"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/bg_blue"
        android:background="@drawable/bg_cacel_btn"
        android:textSize="20sp"
        android:layout_marginLeft="16dp"
        android:layout_below="@id/layout_face_verify"
        />

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="96dp"
        android:layout_height="40dp"
        android:text="@string/cancel"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/bg_blue"
        android:background="@drawable/bg_cacel_btn"
        android:textSize="20sp"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"

        />

    <TextView
        android:id="@+id/btn_save"
        android:layout_width="96dp"
        android:layout_height="40dp"
        android:text="@string/save"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/white"
        android:background="@drawable/bg_save_btn"
        android:textSize="20sp"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/btn_cancel"
        />

</RelativeLayout>