<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_title_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photo"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <ImageView
        android:id="@+id/img_photo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@id/tv_title_photo"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitCenter"
        android:background="@color/bg_blue"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/identity_photo"
        android:layout_toRightOf="@id/img_photo"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="48dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/img_identity_photo"
        android:layout_width="180dp"
        android:layout_height="240dp"
        android:scaleType="fitCenter"
        android:layout_below="@id/tv_title_photo"
        android:layout_toRightOf="@id/img_photo"
        android:text="@string/identity_photo"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="48dp"
        android:background="@color/bg_blue"
        />

    <TextView
        android:id="@+id/tv_title_identity_info"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/identity_info"
        android:layout_toRightOf="@id/img_identity_photo"
        android:layout_marginLeft="48dp"
        />

    <RelativeLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:background="@drawable/table_stroke_shape"
        android:layout_toRightOf="@id/img_identity_photo"
        android:layout_alignTop="@id/img_identity_photo"
        android:layout_alignLeft="@id/tv_title_identity_info"
        >

        <TextView
            android:id="@+id/tv_title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="16dp"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/et_name"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_title_name"
            android:hint="@string/name"
            android:layout_marginLeft="48dp"
            android:layout_alignBaseline="@id/tv_title_name"
            android:textSize="20sp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:background="@drawable/table_stroke_shape"
            />

        <TextView
            android:id="@+id/tv_title_birthday"
            android:layout_below="@id/tv_title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:layout_marginTop="48dp"
            android:layout_marginLeft="16dp"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/et_birthday"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_title_birthday"
            android:hint="@string/birthday"
            android:layout_marginLeft="48dp"
            android:layout_alignBaseline="@id/tv_title_birthday"
            android:textSize="20sp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:background="@drawable/table_stroke_shape"
            />

        <TextView
            android:id="@+id/tv_title_identity_no"
            android:layout_below="@id/tv_title_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/identity_no"
            android:layout_marginTop="48dp"
            android:layout_marginLeft="16dp"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/et_identity_no"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:hint="@string/identity_no"
            android:layout_alignLeft="@id/et_birthday"
            android:layout_alignBaseline="@id/tv_title_identity_no"
            android:textSize="20sp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:background="@drawable/table_stroke_shape"
            />

        <TextView
            android:id="@+id/tv_title_verify_time"
            android:layout_below="@id/tv_title_identity_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_time"
            android:layout_marginTop="48dp"
            android:layout_marginLeft="16dp"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/et_verify_time"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:hint="@string/verify_time"
            android:layout_alignLeft="@id/et_birthday"
            android:layout_alignBaseline="@id/tv_title_verify_time"
            android:textSize="20sp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:background="@drawable/table_stroke_shape"
            />

        <TextView
            android:id="@+id/tv_title_similarity"
            android:layout_below="@id/tv_title_verify_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/similarity"
            android:layout_marginTop="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/et_similarity"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:hint="@string/similarity"
            android:layout_alignLeft="@id/et_birthday"
            android:layout_alignBaseline="@id/tv_title_similarity"
            android:textSize="20sp"
            android:layout_marginBottom="16dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:background="@drawable/table_stroke_shape"
            />

    </RelativeLayout>

</RelativeLayout>