<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <include layout="@layout/layout_nota_title"></include>
    <GridView
        android:padding="40dp"
        android:id="@+id/gv_res_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_nota_title"
        android:numColumns="7"
        android:stretchMode="columnWidth"
        android:horizontalSpacing="20dp"
        android:verticalSpacing="20dp"
        ></GridView>

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="96dp"
        android:layout_height="40dp"
        android:text="@string/cancel"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/bg_blue"
        android:background="@drawable/bg_cacel_btn"
        android:textSize="20sp"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        />

    <TextView
        android:id="@+id/btn_save"
        android:layout_width="96dp"
        android:layout_height="40dp"
        android:text="@string/save"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/white"
        android:background="@drawable/bg_save_btn"
        android:textSize="20sp"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/btn_cancel"
        />

    <TextView
        android:id="@+id/btn_add_txt_res"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:text="@string/add_video"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/white"
        android:background="@drawable/bg_save_btn"
        android:textSize="20sp"
        android:layout_marginLeft="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@id/btn_save"
        />

</RelativeLayout>